# FLASH

./: Dockerfile  README.md  build.sh  run.sh
module/: CMakeLists.txt
module/cmake/: clipper.cmake.in
module/config/: KITTI.yaml
module/include/flash/: align.cpp  flash.cpp  flash.h  manager.cpp  manager.h  parameter.hpp  sph_harm.hpp
module/src/: kitti.cpp  result.txt  vis.py
